--- a/dentko/payment.html
+++ b/dentko/payment.html
@@ -108,7 +108,7 @@
                 <h2 class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</h2>
                 <p class="uk-text uk-text-medium uk-text-bold">Оплатить услуги стоматологии "Дентко" можно наличными денежными средствами и банковскими платежными карточками на ресепшене после приема врача, а также оформить рассрочку на оказанные услуги.</p>
                 <p class="uk-text uk-text-medium">Мечта о белоснежной улыбке сейчас осуществима для каждого. Ведь современная стоматология готова предложить вам услуги восстановления зубного ряда даже при полной адентии. Опытный врач всегда подберет подходящее решение. Вот только рассчитывать на дешевизну не приходится. Ведь цены определяются отнюдь не амбициями клиники, а рядом факторов, влияющих на качество лечения и уровень оказания услуг:</p>
-                <div class="uk-column-1-2 uk-width-child-1-2">
+                <div class="uk-column-1-2@s uk-width-child-1-2">
                     <p class="uk-text text__item"><span class="uk-text uk-text-bold">Материалы.</span> В отличие от государственных клиник, «Дентко» использует импортные композиты и керамику, цена которых неизбежно привязана к евро;</p>
                     <p class="uk-text text__item"><span class="uk-text uk-text-bold">В стоимость включается и амортизация оборудования.</span> Комфортные кресла, бормашины, не перегревающие эмаль и гарантирующие сохранность ваших зубов и защиту их от инфекции, также частично учитываются в стоимости лечения;</p>
                     <p class="uk-text text__item"><span class="uk-text uk-text-bold">Работа специалистов.</span> В клинике Дентко работают врачи 1 и высшей квалификационной категории, а в нашей лаборатории – опытные зубные техники. Цена их труда также отличается от зарплаты студента-практиканта.</p>
@@ -120,7 +120,7 @@
         <section class="about">
             <div class="uk-container">
                 <div class="uk-section">
-                    <div class="uk-grid-match uk-child-width-1-2" uk-grid>
+                    <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid>
                         <div class="about__side">
                             <div class="about__img-wrap">
                                 <img class="about__img" src="./img/about_payment.jpg" uk-img>
@@ -146,7 +146,7 @@
             <div class="uk-container">
                 <h2 class="uk-h1">Стоматология в рассрочку в Минске</h2>
                 <p class="uk-text uk-text-medium">Один из принципов современной стоматологии – это комфорт. Касается он и предоставления финансовых услуг. Так, чтобы получить деньги на лечение, вам не придется самостоятельно обращаться в банк – достаточно записаться на консультацию стоматолога-терапевта в «Дентко»:</p>
-                <div class="uk-column-1-2 uk-width-child-1-2">
+                <div class="uk-column-1-2@s uk-width-child-1-2">
                     <p class="uk-text text__item">Врач осмотрит полость рта, подберет методы лечения и протезирования, распишет для вас их стоимость;</p>
                     <p class="uk-text text__item">После положительного ответа будет оформлен договор на кредит или рассрочку, а также на оказание стоматологических услуг;</p>
                     <p class="uk-text text__item">Сразу после согласования цены на весь комплекс услуг, наша бухгалтерия выпишет счет-фактуру, сделает копии вашего паспорта и направит пакет документов в банк;</p>
