--- a/dentko/price.html
+++ b/dentko/price.html
@@ -287,8 +287,14 @@
                     <h2 class="uk-h2">Консультация стоматолога</h2>
                     <p class="uk-text-meta">Запишитесь на прием к стоматологу в «Дентко» - и мы поможем вам обрести здоровую и счастливую улыбку.</p>
                     <form class="uk-flex uk-flex-middle">
-                        <input class="uk-input" type="text" placeholder="Ваше имя">
-                        <input class="uk-input" type="tel" placeholder="Ваш номер телефона">
+                        <div class="uk-input form__div">
+                            <input class="uk-input" type="text" placeholder="Ваше имя">
+                            <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
+                        </div>
+                        <div class="uk-input form__div">
+                            <input class="uk-input" type="tel" placeholder="Ваш телефон">
+                            <span class="form__err">Введите номер в международном формате</span>
+                        </div>
                         <button class="uk-input" type="submit">Записаться на прием</button>
                         <a href="#" class="form__schedule"><span>Посмотреть режим работы</span><img src="./img/info-w.svg"></a>
                     </form>
@@ -299,7 +305,7 @@
             <div class="uk-container">
                 <h2 class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</h2>
                 <p class="uk-text uk-text-medium">Выбирая медицинский центр для лечения зубов, люди нередко советуются со знакомыми и ищут высококлассного специалиста. Ведь именно от его квалификации, опыта и аккуратности на 70% зависит срок службы пломб и протезов. В стоматологии «Дентко» работают врачи, за результат работы которых вы можете быть уверены:</p>
-                <div class="uk-column-1-2 uk-width-child-1-2">
+                <div class="uk-column-1-2@s uk-width-child-1-2">
                     <p class="uk-text text__item">В штате нашей клиники работают стоматологи только 1 и высшей квалификационных категорий;</p>
                     <p class="uk-text text__item">Наши врачи способны найти решение даже в сложных клинических случаях;</p>
                     <p class="uk-text text__item">Каждый из них – эксперт в своей сфере. Ведь они не прекратили учиться, получив диплом в университете – они продолжают посещать курсы и семинары, изучать новые технологии и материалы и внедрять их в практику.</p>
@@ -310,7 +316,7 @@
         <section class="about">
             <div class="uk-container">
                 <div class="uk-section">
-                    <div class="uk-grid-match uk-child-width-1-2" uk-grid>
+                    <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid>
                         <div class="about__side">
                             <div class="about__img-wrap">
                                 <img class="about__img" src="./img/about_photo.jpg" alt="" uk-img>
@@ -335,7 +341,7 @@
             <div class="uk-container">
                 <h2 class="uk-h1">5 причин лечить зубы в Дентко</h2>
                 <p class="uk-text uk-text-medium">Наш медицинский центр вполне можно назвать семейным. Ведь мы предлагаем услуги лечения и профилактики для малышей и взрослых. Наши врачи всегда подскажут вам, как сберечь здоровье зубов и не платить большие деньги за их восстановление. Кроме того, мы готовы предоставить нашим пациентам 5 неоспоримых преимуществ:</p>
-                <div class="uk-column-1-2 uk-width-child-1-2">
+                <div class="uk-column-1-2@s uk-width-child-1-2">
                     <p class="uk-text text__item">Высокая квалификация и опыт врачей;</p>
                     <p class="uk-text text__item">Передовые технологии, позволяющие лечить зубы без боли;</p>
                     <p class="uk-text text__item">Материалы, гарантирующие прочность и высокую эстетику реставрации;</p>
