--- a/dentko/about.html
+++ b/dentko/about.html
@@ -106,7 +106,7 @@
         <section class="about">
             <div class="uk-container">
                 <div class="uk-section">
-                    <div class="uk-grid-match uk-child-width-1-2" uk-grid>
+                    <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m about__reverse" uk-grid>
                         <div class="about__side">
                             <h2 class="uk-h1">О компании</h2>
                             <p class="uk-text-normal">Стоматологическая клиника «Дентко» — это мир высоких стоматологических технологий, комфорта и домашнего уюта.</p>
@@ -148,7 +148,7 @@
         </section>
         <section class="gallery">
             <div class="uk-container">
-                <div class="uk-flex uk-child-width-1-3 gallery__photos">
+                <div class="uk-flex uk-child-width-1-3@m uk-child-width-1-1@s gallery__photos">
                     <img src="./img/gallery1.png" alt="Фото в галерее" class="uk-img">
                     <img src="./img/gallery2.png" alt="Фото в галерее" class="uk-img">
                     <img src="./img/gallery3.png" alt="Фото в галерее" class="uk-img">
