--- a/dentko/price.html
+++ b/dentko/price.html
@@ -15,12 +15,12 @@
     <header class="header">
         <div class="uk-container">
             <div class="uk-flex uk-flex-between uk-flex-bottom header__wrap">
-                <img src="./img/logo.svg" alt="Логотип" class="header__logo">
-                <dl class="uk-description-list">
+                <a href="./index.html" class="header__main-link"><img src="./img/logo.svg" alt="Логотип" class="header__logo"></a>
+                <dl class="uk-description-list header__item">
                     <dt>Контакты:</dt>
                     <dd>г. Минск, пр-кт Независимости, 58</dd>
                 </dl>
-                <dl class="uk-description-list">
+                <dl class="uk-description-list header__item">
                     <dt>Время работы:</dt>
                     <dd class="uk-inline">
                         <div class="uk-inline header__dropdown-trigger">
@@ -43,7 +43,7 @@
                         </div>
                     </dd>
                 </dl>
-                <dl class="uk-description-list">
+                <dl class="uk-description-list header__item">
                     <dt>Мы в соц.сетях:</dt>
                     <dd class="uk-flex uk-flex-between">
                         <a href="#" class="header__link"><img src="./img/facebook.png" alt="Иконка" class="header__link-img"></a>
@@ -51,7 +51,7 @@
                         <a href="#" class="header__link"><img src="./img/instagram.png" alt="Иконка" class="header__link-img"></a>
                     </dd>
                 </dl>
-                <dl class="uk-description-list">
+                <dl class="uk-description-list header__item">
                     <dt>Телефоны:</dt>
                     <dd>
                         <div class="uk-inline">
@@ -70,6 +70,7 @@
                         </div>
                     </dd>
                 </dl>
+                <button class="header__menu-btn menu-open"><span></span></button>
             </div>
         </div>
     </header>
@@ -98,10 +99,11 @@
                 <li><a href="./team.html">специалисты</a></li>
                 <li><a href="./faq.html">вопрос-ответ</a></li>
                 <li><a href="./contacts.html">контакты</a></li>
-                <li><a class="nav__order" href="#">Записаться на прием <img src="./img/inline-arrow.svg"></a></li>
+                <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="./img/inline-arrow.svg"></a></li>
             </ul>
         </div>
     </nav>
+    <div class="mobile-menu"></div>
     <main class="main">
         <section class="text text_fullscreen accordion">
             <div class="uk-container">
@@ -389,7 +391,7 @@
                         <li><a href="./contacts.html" class="footer__nav-link">контакты</a></li>
                     </ul>
                 </nav>
-                <dl class="uk-description-list uk-flex uk-flex-column ">
+                <dl class="uk-description-list uk-flex uk-flex-column footer__contacts">
                     <dt>Контактные данные:</dt>
                     <dd>ООО "Дентко-Мед", 220005</dd>
                     <dd>г. Минск, пр. Независимости, 58, п. 142 (3 этаж). <a href="./contacts.html" class="footer__green-link">Карта проезда</a></dd>
@@ -401,7 +403,7 @@
                         </div>
                     </dd>
                 </dl>
-                <dl class="uk-description-list uk-flex uk-flex-column ">
+                <dl class="uk-description-list uk-flex uk-flex-column footer__contacts">
                     <dt>Телефоны:</dt>
                     <dd><a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a></dd>
                     <dd><a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a></dd>
@@ -432,9 +434,9 @@
                 </div>
             </div>
             <hr>
-            <div class="uk-flex uk-flex-between uk-child-width-1-3 footer__bottom">
+            <div class="uk-flex uk-flex-between uk-child-width-1-3@s footer__bottom">
                 <div class="footer__bottom-col">
-                    <span class="uk-text uk-text-meta">© 1997 - 2020. Медицинский центр<br>"Дентко".</span>
+                    <span class="uk-text uk-text-meta">© 1997 - 2020. Медицинский центр <br>"Дентко".</span>
                 </div>
                 <div class="uk-flex uk-flex-middle uk-flex-column footer__bottom-col">
                     <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - <img src="./img/rating.png"> 4,9 балла (10 голосов)</span>
@@ -446,6 +448,46 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup__wrapper popup-request">
+        <div class="uk-position-relative popup popup_request">
+            <span class="uk-position-absolute popup__close popup-close"></span>
+            <div class="popup__body">
+                <h2 class="uk-h1">Записаться на прием</h2>
+                <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
+                <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
+                    <div class="uk-input form__div">
+                        <input class="uk-input" type="text" placeholder="Ваше имя">
+                        <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
+                    </div>
+                    <div class="uk-input form__div">
+                        <input class="uk-input" type="tel" placeholder="Ваш телефон">
+                        <span class="form__err">Введите номер в международном формате</span>
+                    </div>
+                    <div class="uk-input form__div">
+                        <input class="uk-input" type="email" placeholder="Ваш e-mail">
+                        <span class="form__err">Неверный формат E-mail адреса</span>
+                    </div>
+                </div>
+                <div class="popup__row">
+                    <textarea class="uk-input" rows="2" placeholder="Что вас беспокоит?"></textarea>
+                </div>
+                <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
+
+                    <button class="uk-button popup__submit popup-sucsess-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="popup__wrapper popup-sucsess">
+        <div class="uk-position-relative popup popup_sucsess">
+            <span class="uk-position-absolute popup__close popup-close"></span>
+            <div class="popup__body">
+                <h2 class="uk-h1 uk-text-center">Ваша заявка принята!</h2>
+                <p class="uk-text uk-text-center uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
+            </div>
+        </div>
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
